# fin-rag

./: .env.example  .gitignore  README.md  pyproject.toml  readme-tw.md  run_tests.py  spec.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: README.md  __init__.py  app.py  deps.py  runtime.py  schemas.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
corpus/: README.md  chunks.jsonl  index.jsonl  index_bm25.json  index_meta.jsonl  manifest.json  spot_check.yaml  subsets.yaml
corpus/raw/: aml-act.html  aml-act.txt  aml-bank-ic.html  aml-bank-ic.txt  aml-finst.html  aml-finst.txt  bank-act.full.txt  bank-act.html  bank-act.txt  fhc-act.full.txt  fhc-act.html  fhc-act.txt  (+26 more)
eval/: baseline-phase1.json  baseline-phase2a.json  baseline-phase2b.json  baseline-phase3.json  baseline-phase5.json  baseline-phase6-scenarios.json  golden.yaml  last_report.json  last_scenarios_report.json  run.py  run_scenarios.py  scenario_review.template.yaml  scenarios.yaml
fin_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: ask.py  build_index.py  chunk_by_article.py  extract_article_subset.py  fetch_moj_law.py  moj_html_to_txt.py  spot_check_corpus.py
tests/: test_agent.py  test_api_app.py  test_ask_script.py  test_citations.py  test_config.py  test_corpus.py  test_corpus_coverage.py  test_eval.py  test_extract_article_subset.py  test_faiss_store.py  test_gemini_integration.py  test_langgraph_integration.py  test_moj.py  test_retrieval_assess.py  test_retrieve.py  test_text_assets.py
(+39 files in other folders)
